# hotvect

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zappr.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.tensorflow  Dockerfile.torch  Dockerfile.torch-tensorflow  NOTICE  README.md  algorithm-demo-plan.md  delivery.yaml  mkdocs.yml  pom.xml
python/: .flake8  .gitignore  DESIGN_REVIEW_AUTO_ATTACH_DATA.md  MANIFEST.in  Makefile  README.rst  SAGEMAKER_BACKTEST_GUIDE.md  SAGEMAKER_INPUTDATACONFIG_SOLUTION.md  pyproject.toml  requirements.txt  setup.py  test_zip_impl.py
python/hotvect/: __init__.py  algorithm_definition_overrides.py  backtest.py  benchmark_contract.py  build_utils.py  command_line.py  hyperparam.py  json_utils.py  jvm_args.py  mlutils.py  offline_task.py  parallel_oneshot.py  prediction_reader.py  pyhotvect.py  s3_utils.py  sagemaker.py  sagemaker_config.py  sagemaker_contracts.py  sagemaker_exp.py  sagemaker_job_name.py  sagemaker_tasks.py  serve.py  tasks.py  test_recursive_get.py  text_data_files.py  utils.py
python/hotvect/direct_worker/: __init__.py  ipc.py  tensorflow_worker.py  torch_zmclip_worker.py
python/hotvect/ems/: __init__.py  auth.py  client.py  models.py
python/hotvect/evaluation/: conversion.py  data_models.py  evaluation.py  metrics.py
python/hotvect/experiment_management/: __init__.py  auth.py  cli.py  client.py  commands.py  hotvect_config.py  models.py  online_results.py
python/hotvect/extra/: __init__.py  cli.py  config.py
python/hotvect/extra/commands/: __init__.py  base.py  catboost_convert.py  compare_equivalence.py  config_cmd.py  download_data_dependency.py  download_results.py  eval_compare.py  inventory_evaluations.py  jsonl_compare.py  metrics.py  perf_compare.py  results.py  show_data_dependency.py
python/hotvect/extra/utils/: __init__.py
python/hotvect/hotvectjar/: __init__.py
python/hotvect/mcp/: __init__.py  docs_repo.py  prompts.py  server.py
python/hotvect/mcp/bundled_docs/: __init__.py
python/hotvect/mcp/bundled_docs/docs/: index.md
python/hotvect/mcp/bundled_docs/docs/agents/: index.md
python/hotvect/mcp/bundled_docs/docs/architecture/: index.md
python/hotvect/mcp/bundled_docs/docs/archive/: index.md
python/hotvect/mcp/bundled_docs/docs/concepts/: index.md
python/hotvect/mcp/bundled_docs/docs/design/: index.md
python/hotvect/mcp/bundled_docs/docs/guides/: index.md
python/hotvect/mcp/bundled_docs/docs/migrations/: index.md
python/hotvect/mcp/bundled_docs/docs/reference/: index.md
python/hotvect/mcp/bundled_docs/docs/stylesheets/: extra.css
python/hotvect/mcp/bundled_docs/overrides/: main.html
python/hotvect/stats/: __init__.py  compare_auc_delong_xu.py
python/hotvect/test/extra/: test_cli.py
python/hotvect/test/extra/commands/: test_base.py  test_catboost_convert.py  test_compare_equivalence.py  test_config_command.py  test_download_data_dependency.py  test_download_results.py  test_eval_compare.py  test_jsonl_compare.py  test_list_available_results.py  test_metrics_command.py  test_perf_compare.py  test_results_download.py  test_results_ls.py  test_show_data_dependency.py
python/hotvect/test/extra/fixtures/: baseline_perf.json  test_encoded.tsv  test_schema.txt  treatment_perf.json
python/hotvect/test/unit/: test_algorithm_definition_overrides.py  test_algorithm_pipeline_override_state.py  test_backtest.py  test_benchmark_contract.py  test_build_utils.py  test_catboost_train_shards.py  test_command_line_jvm_args.py  test_direct_worker_ipc.py  test_direct_worker_tensorflow_worker.py  test_docs_mcp.py  test_ems_client.py  test_evaluation_function_dict.py  test_experiment_management_auth.py  test_experiment_management_client.py  test_experiment_management_hotvect_config.py  test_experiment_management_online_results.py  test_hotvect.py  test_hotvectjar_selection.py  test_hv_backtest_cli.py  test_hv_backtest_submission_files.py  test_hv_cli_validation.py  test_hv_exp_commands.py  test_hv_parallel_oneshot.py  test_hv_passthrough_cli.py  test_hv_performance_test_max_threads.py  test_hv_serve_cli.py  test_hv_train_sagemaker.py  test_jvm_args.py  test_local_sagemaker_predict_audit_parity.py  test_mlutils.py  test_nested_state_packaging.py  test_parallel_oneshot.py  test_perf_test_samples.py  test_prediction_reader.py  test_prediction_spec.py  test_pyhotvect_cache.py  test_pyhotvect_jvm_args.py  test_pyhotvect_logging.py  test_pyhotvect_run_target.py  test_pyproject_runtime_dependencies.py  (+15 more)
python/hotvect/test/unit/evaluation/: test_conversion.py  test_evaluation.py  test_metrics.py
python/hotvect/test/unit/testfiles/: prediction.jsonl
python/hotvect/worker/: __init__.py  litserve_server.py  tensorflow_backend.py  torch_zmclip_backend.py  v2_protocol.py
python/scripts/: _version_common.py  bump_versions.py  check_versions.py  copy_jar.py  docs.sh
(+1318 files in other folders)
