[project]
name = "hotvect"
version = "10.43.2"
description = "Hotvect python interface"
readme = "README.rst"
license = "Apache-2.0"
authors = [
    { name = "Hotvect Team", email = "team@example.com" },
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "boto3>=1.42",
    "boto3-stubs[essential,sagemaker]>=1.42",
    "botocore-stubs>=1.42",
    "catboost~=1.2",
    "jinja2",
    "litserve>=0.2.0",
    "mcp>=1.26,<2",
    "numpy~=1.26",
    "opentelemetry-api~=1.27.0",
    "opentelemetry-exporter-otlp~=1.27.0",
    "opentelemetry-sdk~=1.27.0",
    "orjson>=3.11.9",
    "packaging",
    "pandas~=2.3.3",
    "pebble",
    "psutil",
    "requests",
    "scikit-learn~=1.8",
    "scipy~=1.16",
]

[project.urls]
Homepage = "https://github.com/zalando/hotvect"

[project.optional-dependencies]
# "Marker" extras to make install intent clearer. These may be empty today, but keep them
# stable so docs/examples can recommend `pip install 'hotvect[ext]'` etc.
ext = []
ext-viz = [
    "matplotlib",
]

sagemaker = [
    "s3fs",
    "sagemaker-training; sys_platform == 'linux'",
]
stats = [
    "scipy>=1.10",
]

# Optional: PyTorch + OpenCLIP runtime for text embedding workers.
pytorch = [
    "torch>=2.2,<3",
    "open-clip-torch>=2.0,<3",
    "transformers>=4.40,<5",
    "sentencepiece",
]

# Optional: TensorFlow runtime for training/serving. Used by dedicated Docker images.
tensorflow = [
    "tensorflow>=2.15,<3; sys_platform != 'darwin'",
    "tensorflow-macos>=2.15,<3; sys_platform == 'darwin'",
    "tensorflow-metal>=1.1; sys_platform == 'darwin'",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "hypothesis>=6.148.7",
    "pytest>=8.4.1",
    "pre-commit>=4.5.1",
]

[tool.uv]
# native-tls is optional, instructs to use host cert store
native-tls = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
